# simply-gepa

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
examples/medical_validation/: README.md  convert_data.py  optimize.py
examples/simple_sentiment/: README.md  dataset.jsonl  prompt.txt  run.py
src/gepa/: __init__.py  cli.py  config.py
src/gepa/analysis/: __init__.py  error_analyzer.py
src/gepa/clients/: __init__.py  base.py  llm_client.py
src/gepa/core/: __init__.py  crossover.py  evaluator.py  mutator.py  pareto.py
src/gepa/core/engine/: evolution_engine.py  optimizer.py
src/gepa/core/io/: mutation_logger.py  result_builder.py
src/gepa/core/state/: state_manager.py
src/gepa/core/ui/: progress_tracker.py  visualizer_manager.py
src/gepa/models/: __init__.py  candidate.py  config.py  dataset.py  metrics.py  result.py
src/gepa/visualization/: __init__.py  file_visualizer.py  live_visualizer.py
