[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gepa"
version = "0.3.0"
description = "Genetic-Pareto Prompt Optimizer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GEPA Team"}
]
keywords = ["prompt-optimization", "genetic-algorithm", "pareto-frontier", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
]
ui = [
    "rich>=13.0.0",
]
all = [
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gepa = "gepa.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/gepa"
Repository = "https://github.com/your-org/gepa"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gepa*"]
exclude = ["tests*", "data*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
